#178 fix redo-undo button spacing

--- a/src/app/pages/form-creator/components-page/components-page.component.less
+++ b/src/app/pages/form-creator/components-page/components-page.component.less
@@ -36,6 +36,7 @@ nz-layout {
 }
 
 .redo-undo-container {
+  margin-left: @spacing8;
   margin-right: @spacing20;
 }
 
